--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,27 @@
             <version>${javafx.version}</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itext7-core</artifactId>
             <version>${itext.version}</version>
-            <type>pom</type>  
-         
+            <type>pom</type>       
           
+        </dependency>
+        
+        <!--ControlsFX for notifications-->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.2</version>
         </dependency>
         
    
