--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,20 @@
             <version>11.1.2</version>
         </dependency>
         
-   
- 
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>12.3.1</version>
+        </dependency>
+          
+        <!--icons ikonli-->
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-lineawesome-pack</artifactId>
+            <version>12.3.1</version>
+        </dependency>
+
+
     </dependencies>
      
 
