--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <itext.version>8.0.0</itext.version>
+        <itext.version>8.0.1</itext.version>
         <javafx.version>21-ea+24</javafx.version>
+        <ikonli.version>12.3.1</ikonli.version>
     </properties>
     
     
@@ -53,14 +54,14 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>12.3.1</version>
+            <version>${ikonli.version}</version>
         </dependency>
           
         <!--icons ikonli-->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-lineawesome-pack</artifactId>
-            <version>12.3.1</version>
+            <version>${ikonli.version}</version>
         </dependency>
 
 
