--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <itext.version>8.0.1</itext.version>
         <javafx.version>21-ea+24</javafx.version>
         <ikonli.version>12.3.1</ikonli.version>
+        <slf4j.version>2.0.7</slf4j.version>
     </properties>
     
     
@@ -63,6 +64,17 @@
             <artifactId>ikonli-lineawesome-pack</artifactId>
             <version>${ikonli.version}</version>
         </dependency>
+        
+        <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>${slf4j.version}</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>${slf4j.version}</version>
+</dependency>
 
 
     </dependencies>
