--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <itext.version>8.0.1</itext.version>
-        <javafx.version>21-ea+24</javafx.version>
-        <ikonli.version>12.3.1</ikonli.version>
+        <javafx.version>26-ea+18</javafx.version>
+        <ikonli.version>12.4.0</ikonli.version>
         <slf4j.version>2.0.7</slf4j.version>
+        <controlfx.version>11.2.2</controlfx.version>
+        
     </properties>
     
     
@@ -50,7 +52,7 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.1.2</version>
+            <version>${controlfx.version}</version>
         </dependency>
         
         <!--icons ikonli-->
